--- a/index.html
+++ b/index.html
@@ -72,17 +72,17 @@
                 result.textContent = "Check your marks are correct"
             }
             else if (Number(physics.value) < 35) {
-                result.textContent = "Cheack Your Physics mark "
+                result.textContent = "Check Your Physics mark "
             }
             else if (Number(physics.value) > 100) {
-                result.textContent = "Cheack Your Physics mark "
+                result.textContent = "Check Your Physics mark "
             }
             else if (Number(chemistry.value) < 35) {
-                result.textContent = "Cheack Your Chemistry mark "
+                result.textContent = "Check Your Chemistry mark "
             }
 
             else if (Number(chemistry.value) > 100) {
-                result.textContent = "Cheack Your Chemistry mark "
+                result.textContent = "Check Your Chemistry mark "
             }
             else {
                 var ans = Number(math.value) + Number(physics.value / 2) + Number(chemistry.value / 2)
